logs/to-sentry.log
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gflags'...
Listing './lib/python3.5/site-packages/gflags/third_party'...
Listing './lib/python3.5/site-packages/gflags/third_party/pep257'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_gflags-3.1.2.egg-info'...
Listing './lib/python3.5/site-packages/raven'...
Listing './lib/python3.5/site-packages/raven/conf'...
Listing './lib/python3.5/site-packages/raven/contrib'...
Listing './lib/python3.5/site-packages/raven/contrib/awslambda'...
Listing './lib/python3.5/site-packages/raven/contrib/bottle'...
Listing './lib/python3.5/site-packages/raven/contrib/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django'...
Listing './lib/python3.5/site-packages/raven/contrib/django/celery'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/management/commands'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/middleware'...
Listing './lib/python3.5/site-packages/raven/contrib/django/raven_compat/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/django/templatetags'...
Listing './lib/python3.5/site-packages/raven/contrib/pylons'...
Listing './lib/python3.5/site-packages/raven/contrib/tornado'...
Listing './lib/python3.5/site-packages/raven/contrib/webpy'...
Listing './lib/python3.5/site-packages/raven/contrib/zconfig'...
Listing './lib/python3.5/site-packages/raven/contrib/zerorpc'...
Listing './lib/python3.5/site-packages/raven/contrib/zope'...
Listing './lib/python3.5/site-packages/raven/data'...
Compiling './lib/python3.5/site-packages/raven/deprecation.py'...
***   File "./lib/python3.5/site-packages/raven/deprecation.py", line 6
    def __init__(self, dsn, *args, **kwargs):
                                            ^
SyntaxError: unexpected EOF while parsing

Listing './lib/python3.5/site-packages/raven/handlers'...
Listing './lib/python3.5/site-packages/raven/scripts'...
Listing './lib/python3.5/site-packages/raven/transport'...
Listing './lib/python3.5/site-packages/raven/utils'...
Listing './lib/python3.5/site-packages/raven/utils/serializer'...
Listing './lib/python3.5/site-packages/raven-6.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/to_sentry'...
Compiling './lib/python3.5/site-packages/to_sentry/main.py'...
***   File "./lib/python3.5/site-packages/to_sentry/main.py", line 18
    print 'Usage: %s ARGS\\n%s' % (sys.argv[0], FLAGS)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/to_sentry/transmitter.py'...
***   File "./lib/python3.5/site-packages/to_sentry/transmitter.py", line 19
    print "Usage: to_sentry <sentry feed> Subject line ... "
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/to_sentry-0.0.7.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
